tests/ui/const-generics/generic_const_exprs/dyn-compatibility-err-ret.stderr
error[E0038]: the trait `Foo` is not dyn compatible
  --> $DIR/dyn-compatibility-err-ret.rs:17:16
   |
LL | fn use_dyn(v: &dyn Foo) {
   |                ^^^^^^^ `Foo` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/dyn-compatibility-err-ret.rs:8:8
   |
LL | trait Foo {
   |       --- this trait is not dyn compatible...
LL |     fn test(&self) -> [u8; bar::<Self>()];
   |        ^^^^           ^^^^^^^^^^^^^^^^^^^ ...because method `test` references the `Self` type in its return type
   |        |
   |        ...because method `test` references the `Self` type in its `where` clause
   = help: consider moving `test` to another trait
   = help: only type `()` implements `Foo`; consider using it directly instead.

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
